--- a/src/styles/global-variables.scss
+++ b/src/styles/global-variables.scss
@@ -1,7 +1,7 @@
 $white: #fff;
 $white-blue: #fafafb;
 $white-soft: rgba(#fff, 0.85);
-$black: #333;
+$black: #3c3c3c;
 $black-soft: rgba(#333, 0.85);
 $gray: #747474;
 $gray--dark: #cdcdcd;
@@ -16,6 +16,7 @@ $mobile-width-threshold: 700px;
 $stagger-gap: 6rem;
 
 $shadow: 0 0.3rem 1rem rgba(0,0,0,0.1);
+$shadow-opaque: 0 0.2rem 0.4rem rgba(0,0,0,0.08);
 $smooth-transition: all 0.2s ease;
 $hover-transform: scale(1.05);
 $click-transform: scale(0.88);
