--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -7,7 +7,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   font-size: 90%;
-  background-color: $white-blue;
+  background-color: #F9F7F4;
   // transition: background-color 1000ms ease;
 
   &.dark-mode {
@@ -62,7 +62,6 @@ body {
   padding: 0;
   word-wrap: break-word;
   word-break: keep-all;
-  background-color: $white-blue;
   font-size: 17px;
   color: $black;
   // user-select: none;
