--- a/src/styles/globalstyle.scss
+++ b/src/styles/globalstyle.scss
@@ -8,6 +8,7 @@ html {
   -webkit-font-smoothing: antialiased;
   font-size: 90%;
   background-color: #F9F7F4;
+  background-color: $white-blue;
   // transition: background-color 1000ms ease;
 
   &.dark-mode {
